fix: spacing on textinput

--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -4,7 +4,6 @@
 .textArea {
   width: 100%;
   resize: none;
-  height: 114px;
   padding: 16px;
   font-size: 16px;
   line-height: 150%;
